--- a/Android/OpiniaoDeTudo/app/src/main/res/values/strings.xml
+++ b/Android/OpiniaoDeTudo/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="menu_list_reviews_label">Lista Reviews</string>
     <string name="item_list_edit">Modificar</string>
     <string name="item_list_delete">Apagar</string>
+    <string name="new_item">Novo Item</string>
+    <string name="list_item">Listar Itens</string>
 </resources>
