Exercicio incluir foto

--- a/Android/OpiniaoDeTudo/app/src/main/res/values/strings.xml
+++ b/Android/OpiniaoDeTudo/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="item_list_delete">Apagar</string>
     <string name="new_item">Novo Item</string>
     <string name="list_item">Listar Itens</string>
+    <string name="photo">Foto</string>
 </resources>
