Incluir Tela sobre autor

--- a/Android/OpiniaoDeTudo/app/src/main/res/values/strings.xml
+++ b/Android/OpiniaoDeTudo/app/src/main/res/values/strings.xml
@@ -14,4 +14,11 @@
     <string name="night_mode">Modo Noturno</string>
     <string name="summary_night_mode">No modo noturno as cores do aplicativo ficam escuras</string>
     <string name="settings">Configurações</string>
+    <string name="about">Sobre</string>
+    <string name="summary_about">Informações do autor</string>
+    <string name="label_autor">Autor:</string>
+    <string name="name_autor">José Luiz Rodrigues Corrêa Júnior</string>
+    <string name="label_matricula_autor">Matrícula:</string>
+    <string name="matricula_autor">1731088062</string>
+
 </resources>
